styles.css
/* ... */
/* MOBILE DESIGN  */


@media only screen and (max-width:450px) {

    /* NAV BAR */

    .logo-image, .logo-container, .logo-1 {
      width: 150px;
      height: 35px;
    }

    .logo-container {
        padding-left: 10px;
        padding-top: 2px;
    }

    .logo-image {
        margin-left: 10px;
    }

    .nav-icons {
        padding-right: 0px;
        padding-top: -6px;
    }

    .IG-header, .Instagram-icon, .Instagram, .dropdown-header, .dropdown-icon, .dropdown-image {
        width: 33px;
        height: 33px;
    }

    nav, .nav-wrapper, footer {
        height: 70px;
        top: 0;
    }




    /* DROPDOWN */

    .pages-dropdown, .IG-dropdown {
        height: 350px;

    }

    .pages-dropdown {
        width: 170px;
        padding-right: 20px;
        margin-left: -93px;
        padding-top: 99px;
        margin-top: 31px;
    }

    .IG-dropdown {
        padding-top: 250px;
        width: 170px;
        margin-top: 33px;
    }

    nav .nav-wrapper ul li ul li {
        height: 50px;
        width: 170px;
    }


    /* FOOTER */

    .sticky-footer {
        position: static;
    }


    /* CONTACT PAGE */

    .contact-wrapper {
        padding-top: 0px;
        height: 600px;
    }

    .contact-form {
        padding-top: 110px;
        padding-bottom: 30px;
        border-radius: 0px;
        height: 600px;
    }

    /* NEWS PAGE */

    .news-section {
        padding-top: 220px;
        height: 585px;
    }

    #mc_embed_signup {
        padding-top: 10px;
    }

    .referralBadge {
        width: 100px;
        padding-top: 150px;
    }

    #mce-EMAIL {
        margin-bottom: 10px;
    }

    /* EXHIBITIONS */

    .exhib-content-section {
        display: initial;
    }

    .exhib-words-container {
        padding-right: 25px;
        padding-top: 20px;
        /* HEIGHT CHANGE WHEN ADD TEXT BACK IN */
        height: 200px;
    }

    .exhib-words {
        font-size: 16px;
        font-family: 'Poppins', sans-serif;
    }

    .exhib-image-container {
        padding-left: 25px;
        padding-right: 25px;
        /* margin-bottom: 25px; */
        height: 495px;
        /* margin-top: -40px; */
    }

    .exhib-image {
        width: 325px;
        height: 470px;
    }

    /* THANK YOU */

    .thanks-container {
        height: 526px;
        padding-top: 160px;
    }

    /* BIO */

    .bio-content-container {
        width: 375px;
        padding-right: 25px;
        padding-left: 25px;
        padding-bottom: 25px;
    }

    .bio-content-words {
        font-size: 16px;
        width: 100%;
    }

    .main-content-section {
        height: 778px;
    }

    /* .bio-image-container {
        width: 325px;
        height: 200px;
    } */

    .bio-image {
        width: 325px;
        height: 200px;
    }

    /* HOME PAGE */

    .home-image-container, .home-page-image {
        height: 0px;
    }

    .home-page-image {
        margin-top: -4px;
    }

    .nocopy-image-container {
        margin-bottom: -1px;
    }

    .nocopy-image {
        margin-top: -10px;
    }

    .stickman-container {
        margin-top: -1px;
    }

    .stickman-container {
        width: 100%;
        height: 325px;
        background-color: black;
    }

    .stickman {
        height: 230px;
        width: 36px;
        margin: 0 auto;
        padding-top: 170px;
    }

    .stickman-image {
        width: 30px;
        height: 55px;
    }


    .homepage-words-container {
        width: 100px;
        height: 63px;
        margin: 0 auto;

        padding-top: 20px;
        line-height: 1;
    }

    .stickman-words {
        font-family: 'Poppins', sans-serif;
        color: white;
        font-weight: 400;
        font-size: 11px;
    }

    .home-sticky-footer, .home-footer-section, .home-footer-container {
        height: 0px;
    }

    .homepage-body {
        background-color: black;
    }

    /* ARTWORK PAGE */

    .artwork-body {
        height: 660px;
    }

    .carousel {
        width: 80%;
        height: 520px;
    }

    .carousel__slide {
        /* height: 615px; */
    }

    .carousel__button--right {
        right: -35px;
    }

    .carousel__track-container {
        padding-top: 15px;
        height: 650px
    }

    .art-footer-section {
        height: 100px;
        top: 60px;
    }

    .art-caption {
        top: 38px;
    }
  }


/* ANYTHING BIGGER THAN MOBILE */

    /* HOME PAGE */

  @media only screen and (min-width: 451px) {
      .stickman-container, .stickman, .stickman-image, .homepage-words-container, .homepage-words {
          height: 0px;
      }

      .nocopy-image-container, .nocopy-image {
          height: 0px;
      }

      .homepage-body {
        background-color: black;
    }
  }

  @media only screen and (min-width: 1049px) {
      .homepage-copy {
          height: 0px;

      }
  }


  @media screen and (max-width: 2240px) and (min-width: 1445px) {
    .home-sticky-footer, .home-footer-section, .home-footer-container {
        height: 70px;
    }
}


  @media screen and (max-width: 1444px) and (min-width: 1050px) {
        .home-sticky-footer, .home-footer-section, .home-footer-container {
        height: 70px;
        position: sticky;
        }
    }

  @media screen and (max-width: 1049px) and (min-width: 451px) {
        .blackspace-container {
            background-color: black;
            /* height: 341px; */
            /* width: 100%; */
        }

        .stickman-container, .stickman, .stickman-image, .homepage-words-container, .homepage-words, .homepage-copy {
            height: 0px;
        }

        .homepage-body {
            background-color: black;
            display: block;
            height: 100vh;
        }

        .home-sticky-footer, .home-footer-section, .home-footer-container {
            height: 0px;
        }
  }
/* ... */

